// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`border props 1`] = `
<div class="buri-tabs buri-tabs--line">
  <div class="buri-tabs__wrap">
    <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
      <div class="buri-tabs__line"></div>
    </div>
  </div>
  <div class="buri-tabs__content"></div>
</div>
`;

exports[`change tabs data 1`] = `
<div class="buri-tabs buri-tabs--line">
  <div>
    <div class="buri-sticky">
      <div class="buri-tabs__wrap buri-hairline--top-bottom">
        <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line" style="border-color: #ee0a24;">
          <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text">title1<!----></span></div>
          <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title2<!----></span></div>
          <div role="tab" class="buri-tab buri-tab--disabled buri-ellipsis"><span class="buri-tab__text">title3<!----></span></div>
          <div class="buri-tabs__line" style="background-color: rgb(238, 10, 36);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`change tabs data 2`] = `
<div class="buri-tabs buri-tabs--card">
  <div class="buri-tabs__wrap">
    <div role="tablist" class="buri-tabs__nav buri-tabs__nav--card" style="border-color: blue;">
      <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis" style="border-color: blue; background-color: blue;"><span class="buri-tab__text">title1<!----></span></div>
      <div role="tab" class="buri-tab buri-ellipsis" style="border-color: blue; color: blue;"><span class="buri-tab__text">title2<!----></span></div>
      <div role="tab" class="buri-tab buri-tab--disabled buri-ellipsis" style="border-color: blue;"><span class="buri-tab__text">title3<!----></span></div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`click to switch tab 1`] = `
<div class="buri-tabs buri-tabs--line">
  <div class="buri-tabs__wrap buri-hairline--top-bottom">
    <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
      <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text">title1<!----></span></div>
      <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title2<!----></span></div>
      <div role="tab" class="buri-tab buri-tab--disabled buri-ellipsis"><span class="buri-tab__text">title3<!----></span></div>
      <div class="buri-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane" style="">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`click to switch tab 2`] = `
<div class="buri-tabs buri-tabs--line">
  <div class="buri-tabs__wrap buri-hairline--top-bottom">
    <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
      <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title1<!----></span></div>
      <div role="tab" class="buri-tab buri-tab--active buri-ellipsis" aria-selected="true"><span class="buri-tab__text">title2<!----></span></div>
      <div role="tab" class="buri-tab buri-tab--disabled buri-ellipsis"><span class="buri-tab__text">title3<!----></span></div>
      <div class="buri-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%); transition-duration: 0.3s;"></div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`dot prop 1`] = `
<div class="buri-tabs buri-tabs--line">
  <div class="buri-tabs__wrap buri-hairline--top-bottom">
    <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
      <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text"><div class="buri-info buri-info--dot"></div></span></div>
      <div class="buri-tabs__line"></div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane">Text</div>
  </div>
</div>
`;

exports[`info prop 1`] = `
<div class="buri-tabs buri-tabs--line">
  <div class="buri-tabs__wrap buri-hairline--top-bottom">
    <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
      <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text"><div class="buri-info">10</div></span></div>
      <div class="buri-tabs__line"></div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane">Text</div>
  </div>
</div>
`;

exports[`lazy render 1`] = `
<div class="buri-tabs buri-tabs--line">
  <div>
    <div class="buri-sticky">
      <div class="buri-tabs__wrap buri-hairline--top-bottom">
        <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line" style="border-color: #ee0a24;">
          <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text">title1<!----></span></div>
          <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title2<!----></span></div>
          <div role="tab" class="buri-tab buri-tab--disabled buri-ellipsis"><span class="buri-tab__text">title3<!----></span></div>
          <div class="buri-tabs__line" style="background-color: rgb(238, 10, 36);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`lazy render 2`] = `
<div class="buri-tabs buri-tabs--line">
  <div>
    <div class="buri-sticky">
      <div class="buri-tabs__wrap buri-hairline--top-bottom">
        <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line" style="border-color: #ee0a24;">
          <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text">title1<!----></span></div>
          <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title2<!----></span></div>
          <div role="tab" class="buri-tab buri-tab--disabled buri-ellipsis"><span class="buri-tab__text">title3<!----></span></div>
          <div class="buri-tabs__line" style="background-color: rgb(238, 10, 36); width: 2px; transform: translateX(0px) translateX(-50%);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">Text</div>
  </div>
</div>
`;

exports[`name prop 1`] = `
<div class="buri-tabs buri-tabs--line">
  <div class="buri-tabs__wrap buri-hairline--top-bottom">
    <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
      <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text">title1<!----></span></div>
      <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title2<!----></span></div>
      <div role="tab" class="buri-tab buri-tab--disabled buri-ellipsis"><span class="buri-tab__text">title3<!----></span></div>
      <div class="buri-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane" style="">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`render nav-left & nav-right slot 1`] = `
<div class="buri-tabs buri-tabs--line">
  <div>
    <div class="buri-sticky">
      <div class="buri-tabs__wrap buri-hairline--top-bottom">
        <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line" style="border-color: #ee0a24;">Nav Left<div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text">title1<!----></span></div>
          <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title2<!----></span></div>
          <div role="tab" class="buri-tab buri-tab--disabled buri-ellipsis"><span class="buri-tab__text">title3<!----></span></div>
          <div class="buri-tabs__line" style="background-color: rgb(238, 10, 36);"></div>Nav Right
        </div>
      </div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`rendered event 1`] = `<div role="tabpanel" class="buri-tab__pane" style="">Text</div>`;

exports[`scrollspy 1`] = `
<div class="buri-tabs buri-tabs--line">
  <div>
    <div class="buri-sticky">
      <div class="buri-tabs__wrap buri-hairline--top-bottom">
        <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
          <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text">title1<!----></span></div>
          <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title2<!----></span></div>
          <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title3<!----></span></div>
          <div class="buri-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%);"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane">Text</div>
    <div role="tabpanel" class="buri-tab__pane">Text</div>
    <div role="tabpanel" class="buri-tab__pane">Text</div>
  </div>
</div>
`;

exports[`scrollspy 2`] = `
<div class="buri-tabs buri-tabs--line">
  <div>
    <div class="buri-sticky">
      <div class="buri-tabs__wrap buri-hairline--top-bottom">
        <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
          <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title1<!----></span></div>
          <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title2<!----></span></div>
          <div role="tab" class="buri-tab buri-tab--active buri-ellipsis" aria-selected="true"><span class="buri-tab__text">title3<!----></span></div>
          <div class="buri-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%); transition-duration: 0.3s;"></div>
        </div>
      </div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane">Text</div>
    <div role="tabpanel" class="buri-tab__pane">Text</div>
    <div role="tabpanel" class="buri-tab__pane">Text</div>
  </div>
</div>
`;

exports[`swipe to switch tab 1`] = `
<div class="buri-tabs buri-tabs--line">
  <div class="buri-tabs__wrap buri-hairline--top-bottom">
    <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
      <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text">title1<!----></span></div>
      <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title2<!----></span></div>
      <div role="tab" class="buri-tab buri-tab--disabled buri-ellipsis"><span class="buri-tab__text">title3<!----></span></div>
      <div class="buri-tabs__line"></div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 2`] = `
<div class="buri-tabs buri-tabs--line">
  <div class="buri-tabs__wrap buri-hairline--top-bottom">
    <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
      <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text">title1<!----></span></div>
      <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title2<!----></span></div>
      <div role="tab" class="buri-tab buri-tab--disabled buri-ellipsis"><span class="buri-tab__text">title3<!----></span></div>
      <div class="buri-tabs__line"></div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`swipe to switch tab 3`] = `
<div class="buri-tabs buri-tabs--line">
  <div class="buri-tabs__wrap buri-hairline--top-bottom">
    <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
      <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text">title1<!----></span></div>
      <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">title2<!----></span></div>
      <div role="tab" class="buri-tab buri-tab--disabled buri-ellipsis"><span class="buri-tab__text">title3<!----></span></div>
      <div class="buri-tabs__line"></div>
    </div>
  </div>
  <div class="buri-tabs__content">
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="">Text</div>
    <div role="tabpanel" class="buri-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;
